--- a/microserver-discovery-eureka-ha/src/main/resources/application.yml
+++ b/microserver-discovery-eureka-ha/src/main/resources/application.yml
@@ -5,6 +5,7 @@
 #    service-url:
 #      defaultZone: http://root:890610@localhost:82/eureka #认证：1、在host前加上“user:password@”表示登录或调用该服务时需要认证
 ##这两个是把eureka当做服务  不当做客户端
+#默认是true 这样就可以使得多个eureka相互注册 形成一个高可用的环境
 #    register-with-eureka: false
 #    fetch-registry: false
 #认证：2、这里是与前面认证匹配在一起的 3、pom中添加spring-cloud-starter-security
