--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,5 @@
-
-*.xml
-*.xml
-*.iml
-*.timestamp
-microserver-consumer-movie-ribbon/pom.xml
-microserver-consumer-movie-ribbon/pom.xml
 *.class
-microserver-consumer-movie/target/maven-archiver/pom.properties
-microserver-consumer-movie/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-microserver-consumer-movie/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-microserver-consumer-movie/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
-microserver-consumer-movie/target/microserver-consumer-movie-0.0.1-SNAPSHOT.jar
-microserver-consumer-movie/target/microserver-consumer-movie-0.0.1-SNAPSHOT.jar.original
-microserver-consumer-movie/target/classes/application.yml
-microserver-produce-user/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-microserver-produce-user/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-microserver-consumer-movie-feign-customizing/target/classes/application.yml
-microserver-consumer-movie-feign-withhystrix/target/classes/application.yml
-microserver-consumer-movie-feign/target/classes/application.yml
-microserver-consumer-movie-ribbon-properties-customizing/target/classes/application.yml
-microserver-consumer-movie-ribbon-withhystrix/target/classes/application.yml
-microserver-consumer-movie-ribbon-without-eureka/target/classes/application.yml
-microserver-consumer-movie-ribbon/target/classes/application.yml
-microserver-consumer-movie-ribbon/target/maven-archiver/pom.properties
-microserver-consumer-movie-ribbon/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-microserver-consumer-movie-ribbon/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-microserver-consumer-movie-ribbon/target/microserver-consumer-movie-ribbon-0.0.1-SNAPSHOT.jar
-microserver-consumer-movie-ribbon/target/microserver-consumer-movie-ribbon-0.0.1-SNAPSHOT.jar.original
-microserver-discovery-eureka-ha/target/classes/application.yml
-microserver-discovery-eureka/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-microserver-discovery-eureka/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-microserver-produce-user/target/classes/application.yml
-microserver-discovery-eureka/target/classes/application.yml
-microserver-consumer-movie-ribbon/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+target/
+.idea/
+*.iml
+.gitignore
